--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <h1>The Petition</h1>
   <p>A few facts from the <a href="https://petition.parliament.uk/petitions/131215"><em>2nd EU Referendum</em></a> petition</p>
+  <p>Code for this can be found on <a href="https://github.com/chrishutchinson/eu-ref-petition">GitHub</a>. The JSON that powers it can be found <a href="https://petition.parliament.uk/petitions/131215.json">here</a>.</p>
 
   <main class="body">
     <table class="signatures signatures--by-country">
