Add total and percentages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1>The Petition</h1>
   <p>A few facts from the <a href="https://petition.parliament.uk/petitions/131215"><em>2nd EU Referendum</em></a> petition</p>
   <p>Code for this can be found on <a href="https://github.com/chrishutchinson/eu-ref-petition">GitHub</a>. The JSON that powers it can be found <a href="https://petition.parliament.uk/petitions/131215.json">here</a>.</p>
+  <p><strong>Total signatures so far: </strong><span class="total total--signatures"></span>
+
 
   <main class="body">
     <table class="signatures signatures--by-country">
@@ -18,6 +20,7 @@
           <td>Rank</td>
           <td>Country</td>
           <td>Signatures</td>
+          <td>% of total</td>
         </tr>
       </thead>
       <tbody>
@@ -31,6 +34,7 @@
           <td>Rank</td>
           <td>Constituency</td>
           <td>Signatures</td>
+          <td>% of total</td>
         </tr>
       </thead>
       <tbody>
